[package]
name = "kromia-ledger"
version = "0.1.0"
edition = "2024"
authors = ["M Reyvan Purnama"]
description = "A deterministic, immutable, and cryptographically chained financial ledger engine with double-entry bookkeeping"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reyvanevan/kromia-ledger"
keywords = ["ledger", "accounting", "double-entry", "fintech", "wasm"]
categories = ["finance", "wasm"]
readme = "README.md"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
